fix(prefs): 🐛 fix incorrect option spacing

--- a/resources/skins.citizen.preferences/skins.citizen.preferences.less
+++ b/resources/skins.citizen.preferences/skins.citizen.preferences.less
@@ -61,6 +61,7 @@
 		// This is not the best because it does not adapt to the text length but will revisit later
 		grid-template-columns: repeat( 3, 1fr );
 		gap: var( --space-xxs );
+		margin: 0;
 		text-align: center;
 	}
 
